# CodingPractice

./: TEST_MARKDOWN  TEST_MARKDOWN.mkdn
CPP_Sorting/: .cproject  .gitignore  .project  Array_IO.cpp  Array_IO.h  BubbleSort.cpp  CPP_Sorting.cpp  Makefile  SimpleSorts.cpp  Sort.h
GSF_Hacks/bino-sum/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
GSF_Hacks/bino-sum/.anjuta/session/: anjuta.session  dock-layout.xml
GSF_Hacks/bino-sum/Debug/: Makefile  config.h  config.status  libtool
GSF_Hacks/bino-sum/Debug/po/: Makefile  Makefile.in  POTFILES
GSF_Hacks/bino-sum/Debug/src/: Makefile  bino_sum
GSF_Hacks/bino-sum/Debug/src/.deps/: main.Po
GSF_Hacks/bino-sum/autom4te.cache/: output.0  output.1  requests  traces.1
GSF_Hacks/bino-sum/src/: Makefile.am  Makefile.in  main.cc  main.cc~
GSF_Hacks/stairs/: .cproject  .project
GSF_Hacks/strong-string/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
GSF_Hacks/strong-string/.anjuta/session/: anjuta.session  dock-layout.xml
GSF_Hacks/strong-string/Debug/: Makefile  config.h  config.status  libtool
GSF_Hacks/strong-string/Debug/po/: Makefile  Makefile.in  POTFILES
GSF_Hacks/strong-string/Debug/src/: Makefile  strong_string
GSF_Hacks/strong-string/Debug/src/.deps/: main.Po
GSF_Hacks/strong-string/autom4te.cache/: output.0  output.1  traces.0  traces.1
GSF_Hacks/strong-string/src/: Makefile.am  Makefile.in  main.cc  main.cc~
Learning_Bash/Learning_Bash/: .project  MathOps.sh  README.md  WildCards.sh
Python/Hello_Python/src/helloworld/: __init__.py
